added functionality of search in padron

--- a/APPCV_CSE/Views/Shared/_Layout.cshtml
+++ b/APPCV_CSE/Views/Shared/_Layout.cshtml
@@ -66,6 +66,9 @@
                         <li>
                             <a href="@Url.Action("Consolidado", "Home")"><i class="fa fa-calculator"></i>Consolidado</a>
                         </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Search")"><i class="fa fa-calculator"></i>Buscar</a>
+                        </li>
 
                         @if (Request.IsAuthenticated)
                         {
