--- a/APPCV_CSE/Views/Search/Index.cshtml
+++ b/APPCV_CSE/Views/Search/Index.cshtml
@@ -90,13 +90,12 @@
                     </tr>
                 </thead>
                 <tbody data-bind="foreach: tableResult">
-                    <tr>
+                    <tr data-bind="click: $root.rowOnClick">
                         <td data-bind="text: ci"></td>
-                        <td data-bind="text: (pnom + ' ' + snom + ', ' + papell + ' ' + sappell)"></td>
+                        <td data-bind="text: nombrecompleto"></td>
                         <td data-bind="text: sexo"></td>
                         <td data-bind="text: domicilio"></td>
                         <td data-bind="text: jrv"></td>
-
                     </tr>
                 </tbody>
             </table>
@@ -104,6 +103,22 @@
         <!--/ko-->
     </div>
 </form>
+
+
+<div class="modal" tabindex="-1" role="dialog" id="modalInfo">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Mas Informacion</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modal-body-info-cv">
+            </div>
+        </div>
+    </div>
+</div>
 
 @section scripts{
     <script type="text/javascript" src="//cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
@@ -134,6 +149,47 @@
             var resultModel = function () {
                 let self = this;
                 self.tableResult = ko.observableArray([]);
+
+                self.rowOnClick = function (item) {
+                    let info = `
+                        <strong>Cedula: </strong> ${item.ci}
+                        <br/><strong>Nombre completo: </strong> ${item.nombrecompleto}
+                        <br/><strong>Fecha de nacimiento: </strong> ${item.fecha_nac}
+                        <br/><strong>Domicilio: </strong> ${item.domicilio}
+                        <br/><strong>Lugar de nacimiento: </strong> ${item.lugar_nac}
+                        <br/><h5>Informacion del Centro de Votacion</h5>
+                        <br/><strong>JRV: </strong> ${item.jrv}
+                        <br/><strong>Inscritos: </strong> ${item.cantInscritos}
+                        <br/><strong>Verificados: </strong> ${item.cantVerificados}
+
+                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img src="..." class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="..." class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="..." class="d-block w-100" alt="...">
+                            </div>
+                          </div>
+                          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                          </button>
+                          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                          </button>
+                        </div>
+                    `;
+                    $('#modal-body-info-cv').html(info);
+
+                    setTimeout(function () {
+                        $('#modalInfo').modal('show');
+                    }, 200);
+                }
             };
 
             let model = new resultModel();
