--- a/APPCV_CSE/Views/Search/Index.cshtml
+++ b/APPCV_CSE/Views/Search/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Busqueda";
 }
 
 <style>
@@ -151,43 +151,53 @@
                 self.tableResult = ko.observableArray([]);
 
                 self.rowOnClick = function (item) {
+                    let itemsGaleria = '';
+                    if (item.galeria.length > 0) {
+                        let index = 1;
+                        item.galeria.forEach(function (img) {
+                            itemsGaleria += `
+                                <div class="carousel-item ${index == 1 ? 'active' : ''}">
+                                  <img class="d-block w-100" alt="" src="${bURL + img}">
+                                   <div class="carousel-caption d-none d-md-block">
+                                        <h5>...</h5>
+                                        <p>...</p>
+                                    </div>
+                                </div>
+                            `;
+                            index++;
+                        });
+                    }
+
                     let info = `
                         <strong>Cedula: </strong> ${item.ci}
                         <br/><strong>Nombre completo: </strong> ${item.nombrecompleto}
                         <br/><strong>Fecha de nacimiento: </strong> ${item.fecha_nac}
                         <br/><strong>Domicilio: </strong> ${item.domicilio}
-                        <br/><strong>Lugar de nacimiento: </strong> ${item.lugar_nac}
-                        <br/><h5>Informacion del Centro de Votacion</h5>
-                        <br/><strong>JRV: </strong> ${item.jrv}
-                        <br/><strong>Inscritos: </strong> ${item.cantInscritos}
-                        <br/><strong>Verificados: </strong> ${item.cantVerificados}
 
-                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <h5 style="margin: 10px 0 10px 0">Informacion del Centro de Votacion</h5>
+                        <strong>JRV: </strong> ${item.jrv}
+                        <br/><strong>Inscritos: </strong> ${item.cantInscritos}
+                        
+                        <div class="carousel slide" data-ride="carousel" style="margin-top: 20px;">
                           <div class="carousel-inner">
-                            <div class="carousel-item active">
-                              <img src="..." class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                              <img src="..." class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                              <img src="..." class="d-block w-100" alt="...">
-                            </div>
+                            ${itemsGaleria}
                           </div>
-                          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                          </button>
-                          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                          </button>
+                            <span class="sr-only">Next</span>
+                          </a>
                         </div>
                     `;
                     $('#modal-body-info-cv').html(info);
 
                     setTimeout(function () {
                         $('#modalInfo').modal('show');
+
+                        $('.carousel').carousel();
                     }, 200);
                 }
             };
