--- a/APPCV_CSE/Views/Shared/_Layout.cshtml
+++ b/APPCV_CSE/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
     <!-- Fonts and Codebase framework -->
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,400i,600,700&display=swap">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" id="css-main" href="~/Content/assets/css/codebase.min.css">
 
     <!-- You can include a specific file from css/themes/ folder to alter the default color theme of the template. eg: -->
